# MLOPS_HW_LR4

./: Makefile  README.md  docker-compose.yaml  mypy.ini  pipeline.sh  pyproject.toml  requirements.txt  setup.cfg
config/: hyperparams.yaml
data/processed/: preprocessed_data.csv
models/: DecisionTreeRegressor_5_5_1.joblib  DecisionTreeRegressor_5_7_1.joblib  DecisionTreeRegressor_5_9_1.joblib  DecisionTree_5_5_1.joblib  DecisionTree_5_9_1.joblib
src/: extract.py  first_load.py  load.py  minio_client.py  transform.py
src/modeling/: train.py  transform.py
src/modeling/shell/: extract.sh  first_load.sh  preprocess.sh  upload.sh
