[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["Pokazaneva Polina <pokazaneva8@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "1.14.0"
antlr4-python3-runtime = "4.9.3"
black = "24.8.0"
blinker = "1.9.0"
boto3 = "1.35.51"
botocore = "1.35.51"
cachetools = "5.5.0"
certifi = "2024.8.30"
cfgv = "3.4.0"
charset-normalizer = "3.4.0"
click = "8.1.7"
cloudpickle = "3.1.0"
contourpy = "1.3.1"
cycler = "0.12.1"
databricks-sdk = "0.38.0"
deprecated = "1.2.15"
distlib = "0.3.9"
docker = "7.1.0"
filelock = "3.16.1"
flake8 = "5.0.4"
flask = "3.1.0"
fonttools = "4.55.0"
gitdb = "4.0.11"
gitpython = "3.1.43"
google-auth = "2.36.0"
graphene = "3.4.3"
graphql-core = "3.2.5"
graphql-relay = "3.2.0"
greenlet = "3.1.1"
gunicorn = "23.0.0"
identify = "2.6.1"
idna = "3.10"
importlib-metadata = "8.5.0"
isort = "5.13.2"
itsdangerous = "2.2.0"
jinja2 = "3.1.4"
jmespath = "1.0.1"
joblib = "1.4.2"
kiwisolver = "1.4.7"
mako = "1.3.6"
markdown = "3.7"
markupsafe = "3.0.2"
matplotlib = "3.9.2"
mccabe = "0.7.0"
mlflow = "2.18.0"
mlflow-skinny = "2.18.0"
mypy = "1.11.2"
mypy-extensions = "1.0.0"
nodeenv = "1.9.1"
numpy = "1.26.4"
omegaconf = "2.3.0"
opentelemetry-api = "1.28.2"
opentelemetry-sdk = "1.28.2"
opentelemetry-semantic-conventions = "0.49b2"
packaging = "24.1"
pandas = "1.5.3"
pathspec = "0.12.1"
pillow = "11.0.0"
platformdirs = "4.3.6"
pre-commit = "3.5.0"
protobuf = "5.28.3"
pyarrow = "18.1.0"
pyasn1 = "0.6.1"
pyasn1-modules = "0.4.1"
pycodestyle = "2.9.1"
pyflakes = "2.5.0"
pyparsing = "3.2.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-magic = "0.4.27"
pytz = "2024.2"
pyyaml = "6.0.2"
requests = "2.32.3"
rsa = "4.9"
s3cmd = "2.4.0"
s3transfer = "0.10.3"
scikit-learn = "1.5.2"
scipy = "1.14.1"
six = "1.16.0"
smmap = "5.0.1"
sqlalchemy = "2.0.36"
sqlparse = "0.5.2"
threadpoolctl = "3.5.0"
typing-extensions = "4.12.2"
tzdata = "2024.2"
urllib3 = "2.2.3"
virtualenv = "20.27.1"
werkzeug = "3.1.3"
wrapt = "1.17.0"
zipp = "3.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
